rust/tests/errors/unclosed_match.hyper
match status:
    case "active":
        <span>Active</span>
    case _:
        <span>Unknown</span>
